# singapore-real-estate

./: .gitignore  README.md  pyproject.toml
scripts/utils/: convert_shp_to_csv.ipynb
